src/objects/WorkRequestForm__c.object
<CustomObject>
    <description>This object is used for WRF-POLK.  Work Request Form Table</description>
    <fields>
        <fullName>AAIACodes__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>AAIA Codes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACESCodes__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Scroll down to see all of the selected values</inlineHelpText>
        <label>ACES Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL ACES IDs</fullName>
                </value>
                <value>
                    <fullName>AAIA Code</fullName>
                </value>
                <value>
                    <fullName>ACES Aspiration</fullName>
                </value>
                <value>
                    <fullName>ACES Base Vehicle ID</fullName>
                </value>
                <value>
                    <fullName>ACES Body Number of Doors ID</fullName>
                </value>
                <value>
                    <fullName>ACES Body Style Configuration ID</fullName>
                </value>
                <value>
                    <fullName>ACES Body Type</fullName>
                </value>
                <value>
                    <fullName>ACES CC ID</fullName>
                </value>
                <value>
                    <fullName>ACES CID ID</fullName>
                </value>
                <value>
                    <fullName>ACES Cylinder Head Type Name</fullName>
                </value>
                <value>
                    <fullName>ACES Cylinder ID</fullName>
                </value>
                <value>
                    <fullName>ACES Drive Type</fullName>
                </value>
                <value>
                    <fullName>ACES Engine Base ID</fullName>
                </value>
                <value>
                    <fullName>ACES Engine Block Type</fullName>
                </value>
                <value>
                    <fullName>ACES Engine Config ID</fullName>
                </value>
                <value>
                    <fullName>ACES Engine Designation ID-Offline Only</fullName>
                </value>
                <value>
                    <fullName>ACES Engine VIN ID</fullName>
                </value>
                <value>
                    <fullName>ACES Fuel Delivery</fullName>
                </value>
                <value>
                    <fullName>ACES Fuel Delivery Configuration ID</fullName>
                </value>
                <value>
                    <fullName>ACES Fuel Type</fullName>
                </value>
                <value>
                    <fullName>ACES Liter ID</fullName>
                </value>
                <value>
                    <fullName>ACES Make</fullName>
                </value>
                <value>
                    <fullName>ACES Model</fullName>
                </value>
                <value>
                    <fullName>ACES Power Output ID</fullName>
                </value>
                <value>
                    <fullName>ACES Region</fullName>
                </value>
                <value>
                    <fullName>ACES Submodel</fullName>
                </value>
                <value>
                    <fullName>ACES Valves Per Engine</fullName>
                </value>
                <value>
                    <fullName>ACES Veh Engine Config ID-Offline Only</fullName>
                </value>
                <value>
                    <fullName>ACES Vehicle ID</fullName>
                </value>
                <value>
                    <fullName>ACES Vehicle Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSTimePeriod__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>AFS Time Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIBHighTheftIndicator__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>VISTHEFT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AIBVRG__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>AIB Must Approve use of their VRG program</inlineHelpText>
        <label>AIB Vehicle Rating Group (VRG)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Request Forms</relationshipLabel>
        <relationshipName>Work_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdHocReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. Request - STAT</description>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdditionalInfoReturnedToClient__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Additional Info Returned to Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdhocCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Adhoc/Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AftermarketPartsDemand__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Aftermarket Parts Demand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brake</fullName>
                </value>
                <value>
                    <fullName>Engine</fullName>
                </value>
                <value>
                    <fullName>Filter</fullName>
                </value>
                <value>
                    <fullName>Oil/Lube</fullName>
                </value>
                <value>
                    <fullName>Tire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgeClasses__c</fullName>
        <description>This field is used for WRF-POLK. Added to support EMEA&apos;s MarketInsight VIO and Data Extract Global VIO (PARC) data file vehicle attributes</description>
        <label>Age Classes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remove Age Classes</fullName>
                </value>
                <value>
                    <fullName>Standard 15 Age Classes</fullName>
                </value>
                <value>
                    <fullName>Custom Age Classes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AllSelectedVehicles__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>All Selected Vehicles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AmIAssignedRep__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>IF( PrimarySalesContact__c = $User.Id ,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Assigned Rep?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnalysisDependent__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Is the analysis dependent on receiving client file?</inlineHelpText>
        <label>Analysis Dependent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApartmentAppend__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Apartment Append</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Apartment Append</fullName>
                </value>
                <value>
                    <fullName>Do not Apartment Append</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PolkConnect 1.0</fullName>
                </value>
                <value>
                    <fullName>PolkConnect 2.0</fullName>
                </value>
                <value>
                    <fullName>PolkConnect 3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApplySequenceNumbers__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Apply Sequence numbers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sequence by</fullName>
                </value>
                <value>
                    <fullName>Starts at</fullName>
                </value>
                <value>
                    <fullName>Sequence format</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApprovedByProductReleaseSpecialist__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>If data related, has this request been approved by the Product Release Specialist?</inlineHelpText>
        <label>Approved by Product Release Specialist?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ApprovedByProductStrategy__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Has this request been approved by Product Strategy?</inlineHelpText>
        <label>Approved by Product Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Attention</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Request Forms (Attention)</relationshipLabel>
        <relationshipName>Work_Request_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutoNews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. request type for Australia form</description>
        <label>AutoNews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoTrackerComments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Auto Tracker Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutoTrackerReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. Request - STAT</description>
        <label>Auto Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoTrackerTimePeriod__c</fullName>
        <description>This field is used for WRF-POLK. Job Tracker</description>
        <label>Time Period - AutoTracker</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Month</fullName>
                </value>
                <value>
                    <fullName>CYTD</fullName>
                </value>
                <value>
                    <fullName>Previous year Current Month</fullName>
                </value>
                <value>
                    <fullName>PYTD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvailableMarkets__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Available Markets</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>Iceland</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea, Republic of</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Lithuania</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatteryAttributes__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Battery Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Battery Attributes</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
                <value>
                    <fullName>Battery Standard / Optional</fullName>
                </value>
                <value>
                    <fullName>Multi Battery Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Used by the UK production team.</inlineHelpText>
        <label>Billable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BlankOutPRDataMatchCode5__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>This option will return VIN, Camp#, matchcode and PR in physical state field. Client data will be removed</inlineHelpText>
        <label>Blank out PR data - Match Code 5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BodyStyle__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Body Style</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Brand</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUDI UK</fullName>
                </value>
                <value>
                    <fullName>CHRYSLER UK</fullName>
                </value>
                <value>
                    <fullName>CITROEN UK</fullName>
                </value>
                <value>
                    <fullName>FIAT CHRYSLER CANADA</fullName>
                </value>
                <value>
                    <fullName>FIAT UK</fullName>
                </value>
                <value>
                    <fullName>MERCEDES AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>MERCEDES BELGIUM</fullName>
                </value>
                <value>
                    <fullName>MERCEDES CV UK</fullName>
                </value>
                <value>
                    <fullName>MERCEDES DENMARK</fullName>
                </value>
                <value>
                    <fullName>MERCEDES FRANCE</fullName>
                </value>
                <value>
                    <fullName>MERCEDES ITALY</fullName>
                </value>
                <value>
                    <fullName>MERCEDES NETHERLANDS</fullName>
                </value>
                <value>
                    <fullName>MERCEDES PC UK</fullName>
                </value>
                <value>
                    <fullName>MERCEDES PORTUGAL</fullName>
                </value>
                <value>
                    <fullName>MERCEDES RUSSIA</fullName>
                </value>
                <value>
                    <fullName>MERCEDES SOUTH AFRICA</fullName>
                </value>
                <value>
                    <fullName>MERCEDES SPAIN</fullName>
                </value>
                <value>
                    <fullName>MERCEDES SWEDEN</fullName>
                </value>
                <value>
                    <fullName>PEUGEOT UK</fullName>
                </value>
                <value>
                    <fullName>PORSCHE CHINA</fullName>
                </value>
                <value>
                    <fullName>PORSCHE UK</fullName>
                </value>
                <value>
                    <fullName>RENAULT UK</fullName>
                </value>
                <value>
                    <fullName>SKODA UK</fullName>
                </value>
                <value>
                    <fullName>VOLKSKWAGEN PC UK</fullName>
                </value>
                <value>
                    <fullName>VOLKSWAGEN CV UK</fullName>
                </value>
                <value>
                    <fullName>VOLVO AUSTRALIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BrandedTitleIndicator__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Branded Title Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not apply Detailed Branded Title</fullName>
                </value>
                <value>
                    <fullName>Apply Detailed Branded Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BreakoutFields__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>report format: columns &amp; rows</inlineHelpText>
        <label>Breakout Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudgetPredictor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>VBudgetCatIN          
		A $0 - $5,999   B $6,000 - $9,999   C $10,000 - $14,999   D $15,000 - $19,999   E $20,000 - $24,999   F $25,000 - $29,999   G $30,000 - $39,999   H $40,000 - $49,999   I $50,000 - $74,999   J $75,000 and over</inlineHelpText>
        <label>Budget Predictor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BuybackCase__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Buyback Case#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>California Air Resources Reform</inlineHelpText>
        <label>CARB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CVINA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>CVINA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CabConfig__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cab Config</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaliforniaDataOptions__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>California Data Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use in house CA data only</fullName>
                </value>
                <value>
                    <fullName>Hold CA data ship later</fullName>
                </value>
                <value>
                    <fullName>Do not ship CA data/updates in output file</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignSpecificReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>e.g. SMM Campaign</inlineHelpText>
        <label>Campaign Specific Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaigns__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Campaign(s)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Canada71only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Canada 7/1 only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanadaNVPP__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>7/1 Only</inlineHelpText>
        <label>Canada NVPP</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Canada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CarAndLightTruckDisplay__c</fullName>
        <description>This field is used for WRF-POLK. Holds value data for Car and Light Truck picklists displayed on VF page</description>
        <label>Car and Light Truck Display</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseName__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Case Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Case#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatalogMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Attached Part Attributes for Merge</inlineHelpText>
        <label>ACES Catalog Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeLogsPLC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Change Logs PLC</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeLogs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText># is Updated When Change Log is Submitted, Deleted or upon Refresh of the Screen.</inlineHelpText>
        <label>Change Logs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChinaCV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Commercial Vehicle</inlineHelpText>
        <label>China CV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChinaDataRequests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Use special instructions</inlineHelpText>
        <label>China Data Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClassicAntique__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>1901-1981</inlineHelpText>
        <label>Classic Antique</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Client Id</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClonedFromWRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Cloned from WRF</label>
        <referenceTo>WorkRequestForm__c</referenceTo>
        <relationshipLabel>Work Request Forms (Cloned from WRF)</relationshipLabel>
        <relationshipName>WorkRequestForms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClusteringAgeClass__c</fullName>
        <description>This field is used for WRF-POLK. ESSEN Clustering UsedReg Age Class</description>
        <label>Clustering Age Class (Used Reg Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClusteringRegistrationMonth__c</fullName>
        <description>This field is used for WRF-POLK. ESSEN Clustering UsedReg Registration Month</description>
        <label>Clustering Reg Month (Used Reg Only)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommercialDatabase__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>List in order of priority</inlineHelpText>
        <label>Commercial Database</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CommercialVehicles__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Scroll down to see all of the selected values</inlineHelpText>
        <label>Commercial Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL Commercial Attributes</fullName>
                </value>
                <value>
                    <fullName>Vehicle Type</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Make</fullName>
                </value>
                <value>
                    <fullName>Year Model</fullName>
                </value>
                <value>
                    <fullName>Series</fullName>
                </value>
                <value>
                    <fullName>Model</fullName>
                </value>
                <value>
                    <fullName>Cylinders</fullName>
                </value>
                <value>
                    <fullName>Engine Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Engine Model</fullName>
                </value>
                <value>
                    <fullName>Displacement</fullName>
                </value>
                <value>
                    <fullName>Liters</fullName>
                </value>
                <value>
                    <fullName>Fuel Type</fullName>
                </value>
                <value>
                    <fullName>Gross Vehicle Weight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComparisonGroupsWeighed__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Any comparison groups to be weighted?</inlineHelpText>
        <label>Comparison groups weighed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletePrefixFile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Complete Prefix File</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>